# dbf-to-csv-converter

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  SETUP_COMPLETE.md  WEB_UI_GUIDE.md  _config.yml  check_csv.py  data_validator.py  dbf2csv.py  index.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_encoding.py  test_js.html  test_report.json  test_t_anrede.csv  test_validator.py  web_ui.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
templates/: base.html  index.html  preview.html
tests/: test_dbf2csv.py
uploads/: 6b7151e3-31a9-4d72-afa5-4c2fdb85587c_T_ADRESS.FPT
