[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbf-to-csv-converter"
version = "1.0.0"
description = "Convert DBF files to CSV with German character support"
readme = "README.md"
license = "MIT"
authors = [
    {name = "r4inX", email = "vik.lamp.vl@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Database",
    "Topic :: Text Processing",
]
keywords = ["dbf", "csv", "converter", "german", "encoding", "dbase", "database"]
requires-python = ">=3.8"
dependencies = [
    "dbfread>=2.0.7",
]

[project.urls]
Homepage = "https://github.com/r4inX/dbf-to-csv-converter"
Repository = "https://github.com/r4inX/dbf-to-csv-converter"
Issues = "https://github.com/r4inX/dbf-to-csv-converter/issues"
Documentation = "https://github.com/r4inX/dbf-to-csv-converter#readme"

[project.scripts]
dbf2csv = "dbf2csv:main"

[tool.setuptools]
py-modules = ["dbf2csv"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=dbf2csv --cov-report=term-missing --cov-report=xml"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
]